<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">PeakPlayZZ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_home">Home</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="app_logo">App Logo</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="rosters">Rosters</string>
    <string name="schedules">Schedules</string>
    <string name="home_fragment_title">Home Fragment</string>

    <string name="language_title">Language</string>
    <string name="select_language">Select language</string>
    <string name="notifications">Notifications</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="settings">Settings</string>

    <string-array name="languages">
        <item>English</item>
        <item>Español</item>
        <item>Français</item>
        <item>Deutsch</item>
        <item>Italiano</item>
        <item>中文</item>
        <item>日本語</item>
        <item>한국어</item>
    </string-array>

    <string-array name="language_codes">
        <item>en</item>
        <item>es</item>
        <item>fr</item>
        <item>de</item>
        <item>it</item>
        <item>zh</item>
        <item>ja</item>
        <item>ko</item>
    </string-array>

    <!-- Sign In/Auth related strings -->
    <string name="sign_in">Sign In</string>
    <string name="sign_in_title">Sign In</string>
    <string name="username_email">Username/Email:</string>
    <string name="username_email_hint">Enter your username or email</string>
    <string name="password">Password:</string>
    <string name="password_hint">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account_prompt">Don\'t have an account?\nCreate one here</string>
    <string name="sign_in_button">Sign In</string>

    <string name="additional_leagues">Favorite Teams/Leagues</string>
    <string name="live_score">Big Event! Live Score</string>

    <string name="enable_notifications_message">To receive notifications, you need to enable them in system settings.</string>
    <string name="disable_notifications_message">To disable notifications, you need to turn them off in system settings.</string>
    <string name="cancel">Cancel</string>
    <string name="keep_enabled">Keep Enabled</string>
    <string name="disable_notifications">Disable Notifications</string>

    <string name="changing_language">Changing language…</string>

    <string name="title_home">Home</string>

    <!-- Password Reset Page -->
    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_instruction">Enter your email address to reset your password</string>
    <string name="email_address">Email Address:</string>
    <string name="email_hint">Enter your email address</string>
    <string name="reset_password_button">Reset Password</string>
    <string name="back_to_sign_in">Back to Sign In</string>
    <string name="reset_email_sent">Password reset email has been sent</string>
    <string name="reset_email_error">Error sending reset email</string>

    <!-- Create Account Page -->
    <string name="create_account_title">Create Account</string>
    <string name="full_name">Full Name:</string>
    <string name="full_name_hint">Enter your full name</string>
    <string name="email">Email:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="confirm_password_hint">Confirm your password</string>
    <string name="create_account_button">Create Account</string>
    <string name="already_have_account">Already have an account? Sign in here</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="account_created">Account created successfully</string>
    <string name="account_creation_error">Error creating account</string>

    <string name="first_name">First Name:</string>
    <string name="first_name_hint">Enter your first name</string>
    <string name="last_name">Last Name:</string>
    <string name="last_name_hint">Enter your last name</string>
    <string name="phone_number">Phone Number:</string>
    <string name="phone_hint">Enter your phone number</string>
    <string name="country">Country of Residence:</string>
    <string name="country_hint">Select your country</string>

    <string name="favorite_teams_leagues">Favorite Teams/Leagues</string>
    
    <!-- Home page headers -->
    <string name="leagues_header">Leagues</string>
    <string name="top_headlines_header">Live Scores</string>
    <string name="headline_1">Manchester United secures dramatic win in final minutes</string>
    <string name="headline_2">Lakers dominate in season opener against Warriors</string>
    <string name="headline_3">Roger Federer announces new tennis development program</string>
    <string name="headline_4">MLB playoffs: Unexpected upset in division series</string>
    <string name="headline_5">Formula 1: New track records set in qualifying</string>
    <string name="headline_6">Champions League: Surprise results shake up group standings</string>
    <string name="headline_7">NFL trade deadline: Major moves shake up playoff race</string>
    <string name="headline_8">NBA: Rising star breaks scoring record</string>
    <string name="headline_9">Premier League: Title race heats up with unexpected results</string>
    <string name="headline_10">Olympics: New sports added for 2028 games</string>

    <!-- League Buttons -->
    <string name="league_button_1">NFL</string>
    <string name="league_button_2">NBA</string>
    <string name="league_button_3">MLB</string>
    <string name="league_button_4">NHL</string>
    <string name="league_button_5">Soccer</string>
    <string name="league_button_6">F1</string>
    <string name="league_button_7">Tennis</string>
    <string name="league_button_8">Golf</string>
    <string name="league_button_9">UFC</string>

    <string name="set_password">Set Password:</string>
    <string name="set_password_hint">Create your password</string>

    <string name="sign_out">Sign Out</string>

    <string name="back_button">Back</string>

    <string name="team_logo">Team Logo</string>

    <string name="league_logo">League Logo</string>
    <string name="league_details">League Details</string>

    <string name="favorite_team">Favorite Team</string>

    <!-- News Section Strings -->
    <string name="latest_sports_news">Latest Sports News</string>
    <string name="nba_news">NBA News</string>
    <string name="nfl_news">NFL News</string>
    <string name="mlb_news">MLB News</string>
    <string name="nhl_news">NHL News</string>
    <string name="soccer_news">Soccer News</string>
    <string name="f1_news">Formula 1 News</string>
    <string name="sports_headlines">Sports Headlines</string>

    <!-- Player related strings -->
    <string name="player_image">Player Image</string>
    <string name="player_details">Player Details</string>
    <string name="player_number_format">#%s</string>
    <string name="player_detail_separator"> • </string>

    <string name="no_players_found">No players found for %1$s</string>
    <string name="error_loading_roster">Error loading roster</string>
    <string name="unknown_position">Unknown</string>
    <string name="not_available">N/A</string>
    <string name="player_name">%1$s</string>
    <string name="player_position">Position: %1$s</string>
    <string name="player_number">#%1$s</string>
    <string name="player_height">Height: %1$s</string>
    <string name="player_weight">Weight: %1$s</string>
    <string name="player_nationality">Nationality: %1$s</string>
    <string name="player_dob">DOB: %1$s</string>
    <string name="news_image" />
</resources>