<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">
    
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.peakplays.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    
    <fragment
        android:id="@+id/navigation_news"
        android:name="com.example.peakplays.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news" />
    
    <fragment
        android:id="@+id/navigation_rosters"
        android:name="com.example.peakplays.RostersFragment"
        android:label="@string/rosters" />
    
    <fragment
        android:id="@+id/navigation_schedules"
        android:name="com.example.peakplays.SchedulesFragment"
        android:label="@string/schedules" />
    
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.peakplays.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    
    <!-- Add your navigation destinations here -->
    
</navigation> 